--- a/dist.ini
+++ b/dist.ini
@@ -7,3 +7,11 @@ copyright_year   = 2013
 version = 0.001
 
 [@Basic]
+
+[AutoPrereqs]
+
+[Prereqs / TestRequires]
+DBI = 0
+Test::More = 0.98
+Test::Exception = 0.31
+
