Added main module and version injection

--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,12 @@ license = Perl_5
 copyright_holder = Jerome Eteve
 copyright_year   = 2013
 
+abstract = Manage Postgresql blobs from any DBI (dbh) capable object.
+main_module = lib/Pg/Blobs.pm
+
 version = 0.001
+
+[PkgVersion]
 
 [@Basic]
 
