Fixed test failure of Test::postgresql

--- a/dist.ini
+++ b/dist.ini
@@ -7,11 +7,15 @@ copyright_year   = 2013
 abstract = Manage Postgresql blobs from any DBI (dbh) capable object.
 main_module = lib/Pg/Blobs.pm
 
-version = 0.001
+version = 0.002
 
 [PkgVersion]
 
-[@Git]
+[Git::Check]
+[Git::Commit]
+[Git::Tag]
+[Git::Push]
+
 [@Basic]
 
 [AutoPrereqs]
