repository in META.*

--- a/dist.ini
+++ b/dist.ini
@@ -26,3 +26,9 @@ push_to = origin
 DBI = 0
 Test::More = 0.98
 Test::Exception = 0.31
+
+[MetaJSON]
+[MetaResources]
+repository.web  = https://github.com/jeteve/Pg-Blobs
+repository.url  = https://github.com/jeteve/Pg-Blobs.git
+repository.type = git
